force-app/main/default/objects/LoanPayACBal__c/LoanPayACBal__c.object-meta.xml
<CustomObject>
    <label>Loan Pay+A/C Bal</label>
    <nameField>
        <displayFormat>LPAC-{000000}</displayFormat>
        <label>LOAN PAY+A/C BAL ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Pay+A/C Bal</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>