force-app/main/default/objects/LoanPayACBal__c/fields/ACBalanceRollupStatus__c.field-meta.xml
<CustomField>
    <fullName>ACBalanceRollupStatus__c</fullName>
    <label>A/C BAL ROLLUP STATUS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RECEIVABLE_PAYABLE_ROLLUP_STATUS</valueSetName>
    </valueSet>
</CustomField>