force-app/main/default/objects/LoanPayACBal__c/fields/AmountPaidFormula__c.field-meta.xml
<CustomField>
    <fullName>AmountPaidFormula__c</fullName>
    <formula>LoanPaymentID__r.AmountPaid__c</formula>
    <label>AMOUNT PAID-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>