force-app/main/default/objects/LoanPayACBal__c/fields/LoanPaymentID__c.field-meta.xml
<CustomField>
    <fullName>LoanPaymentID__c</fullName>
    <label>LOAN PAYMENT ID</label>
    <referenceTo>LoanRepayment__c</referenceTo>
    <relationshipLabel>LOAN PAY+A/C BAL</relationshipLabel>
    <relationshipName>LoanPayACBal</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>